force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Used in Account Compact view for lead conversion lightning.</description>
    <formula>BillingStreet +BR()+ BillingCity + &quot;, &quot;  + &quot; &quot; + BillingState  +  &quot; &quot; +  BillingPostalCode +BR()+ BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>