force-app/main/default/objects/Account/fields/Account_for_Transition__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Transition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#34880</description>
    <label>Account for Transition</label>
    <type>Checkbox</type>
</CustomField>