force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <inlineHelpText>ID&apos;s from Oracle</inlineHelpText>
    <label>Sales Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>