force-app/main/default/objects/Account/fields/Account_Number_Sales_text__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Sales_text__c</fullName>
    <label>Sales Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>