force-app/main/default/objects/Account/fields/Account_Quadrant__c.field-meta.xml
<CustomField>
    <fullName>Account_Quadrant__c</fullName>
    <label>Account Quadrant (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canada Territory Working 100</fullName>
            </value>
            <value>
                <fullName>Grow/Quad 1</fullName>
            </value>
            <value>
                <fullName>HC Target Account</fullName>
            </value>
            <value>
                <fullName>MM Director Stamped</fullName>
            </value>
            <value>
                <fullName>Pursuit</fullName>
            </value>
            <value>
                <fullName>Quad 4/Sub 1</fullName>
            </value>
            <value>
                <fullName>Quad 4/Sub 2</fullName>
            </value>
            <value>
                <fullName>Quad 4/Sub 3</fullName>
            </value>
            <value>
                <fullName>Quad 4/Sub 4</fullName>
            </value>
            <value>
                <fullName>Retain/Quad 3</fullName>
            </value>
            <value>
                <fullName>Retain &amp; Grow/Quad 2</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>