force-app/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <label>Account Segment (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>#N/A</fullName>
                <isActive>false</isActive>
                <label>#N/A</label>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>01J8000000Ghy97</fullName>
                <isActive>false</isActive>
                <label>01J8000000Ghy97</label>
            </value>
            <value>
                <fullName>a3i80000001IPBr</fullName>
                <isActive>false</isActive>
                <label>a3i80000001IPBr</label>
            </value>
            <value>
                <fullName>CDA - Unassigned</fullName>
                <isActive>false</isActive>
                <label>CDA - Unassigned</label>
            </value>
            <value>
                <fullName>CDA-Unassigned</fullName>
                <isActive>false</isActive>
                <label>CDA-Unassigned</label>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Commercial Canada</fullName>
                <isActive>false</isActive>
                <label>Commercial Canada</label>
            </value>
            <value>
                <fullName>Commercial - Canada</fullName>
                <isActive>false</isActive>
                <label>Commercial - Canada</label>
            </value>
            <value>
                <fullName>Commercial East</fullName>
                <isActive>false</isActive>
                <label>Commercial East</label>
            </value>
            <value>
                <fullName>Commercial - East</fullName>
                <isActive>false</isActive>
                <label>Commercial - East</label>
            </value>
            <value>
                <fullName>Commercial West</fullName>
                <isActive>false</isActive>
                <label>Commercial West</label>
            </value>
            <value>
                <fullName>Commercial - West</fullName>
                <isActive>false</isActive>
                <label>Commercial - West</label>
            </value>
            <value>
                <fullName>Coverage 1</fullName>
            </value>
            <value>
                <fullName>Coverage 2</fullName>
            </value>
            <value>
                <fullName>Coverage 3</fullName>
            </value>
            <value>
                <fullName>Coverage 4</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise Canada</fullName>
            </value>
            <value>
                <fullName>Enterprise East</fullName>
            </value>
            <value>
                <fullName>Enterprise West</fullName>
            </value>
            <value>
                <fullName>Generalist</fullName>
            </value>
            <value>
                <fullName>Global Industries</fullName>
                <isActive>false</isActive>
                <label>GISV</label>
            </value>
            <value>
                <fullName>GISV</fullName>
            </value>
            <value>
                <fullName>GLEAM</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Government - Canada</fullName>
                <isActive>false</isActive>
                <label>Government - Canada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>