force-app/main/default/objects/Account/fields/Account_segment_lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_segment_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Sub-Segment lookup TO BE DELETED</label>
    <referenceTo>Account_Sub_Segment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>