force-app/main/default/objects/Account/fields/Account_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Segment__c</fullName>
    <label>Account Sub-Segment (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Segment</fullName>
            </value>
            <value>
                <fullName>APAC-ANZ</fullName>
            </value>
            <value>
                <fullName>APAC-SEA</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>CCD</fullName>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>Crozier Fine Arts (CFA)</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>EISR</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Enterprise Canada</fullName>
            </value>
            <value>
                <fullName>Enterprise East</fullName>
            </value>
            <value>
                <fullName>Enterprise West</fullName>
            </value>
            <value>
                <fullName>Entertainment Services (IMES)</fullName>
            </value>
            <value>
                <fullName>Federal – Canada</fullName>
                <label>Federal Canada</label>
            </value>
            <value>
                <fullName>Federal-US</fullName>
            </value>
            <value>
                <fullName>Financial Service- Canada</fullName>
                <label>Financial Service Canada</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Healthcare/ Life Sciences – Canada</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>IPB</fullName>
            </value>
            <value>
                <fullName>IPRO</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>Large Commercial</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Legal – Canada</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>