force-app/main/default/objects/Account/fields/Account_Team_Name_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Name_Summary__c</fullName>
    <label>Account Team Name Summary TO BE DELETED</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>