force-app/main/default/objects/Account/fields/Additional_Info_for_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_for_Relationship_Manager__c</fullName>
    <inlineHelpText>Please enter anything more that the relationship owner should know about this account</inlineHelpText>
    <label>Additional Info for Relationship Manager</label>
    <type>TextArea</type>
</CustomField>