force-app/main/default/objects/Account/fields/Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_Formula__c</fullName>
    <formula>BillingCity&amp;&quot;, &quot;&amp;BillingState&amp;&quot; &quot; &amp;BillingPostalCode</formula>
    <label>Address Formula</label>
    <type>Text</type>
</CustomField>