force-app/main/default/objects/Account/fields/ALM_House_Account__c.field-meta.xml
<CustomField>
    <fullName>ALM_House_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#30205-Account: create a &quot;ALM House Account&quot; field on the IMGA</description>
    <label>ALM House Account</label>
    <type>Checkbox</type>
</CustomField>