force-app/main/default/objects/Account/fields/ALM_Products__c.field-meta.xml
<CustomField>
    <fullName>ALM_Products__c</fullName>
    <description>34928 : Support Account Transition in PeopleGlass - ALM Products sold in Past 2 years, data loaded by SOps</description>
    <label>ALM Products</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>