force-app/main/default/objects/Account/fields/ALM_Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>ALM_Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#29142_Account: Sellers should be able to capture which Accounts are &apos;Strategic&apos; to support Account Plan (people.ai)</description>
    <label>ALM Strategic Account</label>
    <type>Checkbox</type>
</CustomField>