force-app/main/default/objects/Account/fields/AMD__c.field-meta.xml
<CustomField>
    <fullName>AMD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Managing Director
#34421: Data is copied from Country Parent
#35890- Update Account Coverage field labels according to new GTM strategy</description>
    <label>CP (Client Partner)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AMD</relationshipName>
    <type>Lookup</type>
</CustomField>