force-app/main/default/objects/Account/fields/AMD_Formula__c.field-meta.xml
<CustomField>
    <fullName>AMD_Formula__c</fullName>
    <description>#34421: To copy data from Country Parent Account to Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Lookup field(AMD__c)</description>
    <formula>IF(
/*If Account is Country Parent, stores AMD value */
ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;), AMD__c,
IF(
/*If Account is Sales site, stores Country Parent Account&apos;s AMD__c by traversing one level up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(ParentId))), Parent.AMD__c,
IF(
/*If Account is Parent HQ, stores Country Parent Account&apos;s AMD__c by traversing one level up the hierarchy*/
ISPICKVAL(IM_Hierarchy_Level__c, &apos;Parent HQ&apos;), Parent.AMD__c,AMD__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMD(Formula)</label>
    <type>Text</type>
</CustomField>