force-app/main/default/objects/Account/fields/ANZ_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Record_ID__c</fullName>
    <description>This field will store the account id from anz org and will be utilized by mule soft to populate data #23199</description>
    <externalId>true</externalId>
    <label>ANZ Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>