force-app/main/default/objects/Account/fields/At_Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Comments__c</fullName>
    <description>#29280 : At-Risk: Provide the ability to capture notes and additional comments for &apos;At-Risk&apos; Account updates</description>
    <label>At-Risk Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>