force-app/main/default/objects/Account/fields/At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Score__c</fullName>
    <description>This is the account weighted risk score. It takes into account all risk at the CID level and summarizes this information at the IMGA level.
0-6: Low Risk
7-9: Medium Risk
10: High Risk</description>
    <inlineHelpText>This is the account weighted risk score.</inlineHelpText>
    <label>At Risk Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>