force-app/main/default/objects/Account/fields/At_Risk_Status_New__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Status_New__c</fullName>
    <description>#28487 : &apos;At-Risk&apos; fields to capture necessary details of the new At-Risk process</description>
    <label>At-Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At-Risk</fullName>
            </value>
            <value>
                <fullName>Not At-Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>