force-app/main/default/objects/Account/fields/Bill_To_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Site_Number__c</fullName>
    <label>Billing Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>