force-app/main/default/objects/Account/fields/Canadian_Public_Sector__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Public_Sector__c</fullName>
    <inlineHelpText>Is this Account for a Canadian Public Sector / Government Account?</inlineHelpText>
    <label>Canadian Public Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>