force-app/main/default/objects/Account/fields/Contract_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address_1__c</fullName>
    <label>Contract Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>