force-app/main/default/objects/Account/fields/Contract_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address_2__c</fullName>
    <label>Contract Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>