force-app/main/default/objects/Account/fields/Contract_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address_3__c</fullName>
    <label>Contract Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>