force-app/main/default/objects/Account/fields/Contract_City__c.field-meta.xml
<CustomField>
    <fullName>Contract_City__c</fullName>
    <label>Contract City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>