force-app/main/default/objects/Account/fields/Contract_Country__c.field-meta.xml
<CustomField>
    <fullName>Contract_Country__c</fullName>
    <label>Contract Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>