force-app/main/default/objects/Account/fields/Contract_County__c.field-meta.xml
<CustomField>
    <fullName>Contract_County__c</fullName>
    <label>Contract County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>