force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>The last day of the contract.  Also known as the contract renewal date.</description>
    <inlineHelpText>The last day of the contract.  Also known as the contract renewal date.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>