force-app/main/default/objects/Account/fields/Contract_Exists__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exists__c</fullName>
    <label>Contract Exists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>