force-app/main/default/objects/Account/fields/Contract_Floor__c.field-meta.xml
<CustomField>
    <fullName>Contract_Floor__c</fullName>
    <label>Contract Floor</label>
    <length>3</length>
    <type>Text</type>
</CustomField>