force-app/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The date the contract is signed.</description>
    <inlineHelpText>The date the contract is signed.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>