force-app/main/default/objects/Account/fields/Contract_State__c.field-meta.xml
<CustomField>
    <fullName>Contract_State__c</fullName>
    <label>Contract State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>