force-app/main/default/objects/Account/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <inlineHelpText>If Contract is up for renewal in next 6 months, what is it&apos;s status today? Enter applicable business lines (i.e. Only DB&amp;R is up for renewal and they are price sensitive).</inlineHelpText>
    <label>Contract Status</label>
    <type>TextArea</type>
</CustomField>