force-app/main/default/objects/Account/fields/Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Lead__c</fullName>
    <description>#16068 : Sanctioned Accounts: Restrict Lead Conversion to Existing Sanctioned Account
To restrict conversion of leads to sanctioned accounts(Existing accounts), created this field and mapped this field with Lead fields mapping(Converted to account)</description>
    <label>Converted From Lead</label>
    <length>30</length>
    <type>Text</type>
</CustomField>